# AI-Control-Room-VLLM

./: README.md
gz-waves/: CMakeLists.txt
gz-waves-models/: CMakeLists.txt  package.xml
gz-waves-models/hooks/: waves_models.dsv.in
gz-waves-models/models/barrage_buoy/: model.sdf
gz-waves-models/models/duck/: model.sdf
gz-waves-models/models/rm3_wec/: model.sdf
gz-waves-models/models/rm3_wec_mini/: model.sdf
gz-waves-models/models/shipping_container/: model.sdf
gz-waves-models/models/spherical_buoy/: model.sdf
gz-waves-models/models/surmark_buoy_black/: model.sdf
gz-waves-models/models/surmark_buoy_red/: model.sdf
gz-waves-models/models/surmark_buoy_red/meshes/: surmark950410.dae
gz-waves-models/models/surmark_buoy_white/: model.config  model.sdf
gz-waves-models/models/wamv/: model.sdf
gz-waves-models/models/wamv_camera/: model.sdf
gz-waves-models/models/wamv_thrust/: model.sdf
gz-waves-models/world_models/ocean_waves/: model.sdf
gz-waves-models/world_models/regular_waves/: model.sdf
gz-waves-models/world_models/trochoid_waves/: model.config  model.sdf
gz-waves-models/world_models/waves_high/: model.sdf
gz-waves-models/world_models/waves_low/: model.sdf
gz-waves-models/worlds/: buoyancy_test.world  dynamic_geometry.world  graded_buoyancy_waves.world  waves.world  waves_high.world  waves_wind.world
gz-waves/src/gui/plugins/waves_control/: CMakeLists.txt
ros_gz_ai_control/: gui.config  package.xml  setup.cfg  setup.py
ros_gz_ai_control/launch/: ai_control.launch.py  upload_robot.launch.py
(+7 files in other folders)
